Copy edit Section 2, with eye for clarity of model

--- a/draft.tex
+++ b/draft.tex
@@ -112,43 +112,39 @@ These empirical results have until recently lacked strong theoretical foundation
 \section{Model} %A DIFFERENT MODEL BUT SAME RESULT AS FR 10; THIS SHOULD BUILD OUR CONFIDENCE IN MODELLING. EMPHASIZE SCENARION (EGYPT USRAEL ETC) THAT ARE BETTER TO MODEL WITH Our MODEL. IT CAN ALSO BE THOUGHT OF AS REDUCED FORM OF A BARGAINING MOEL, BUT IT DOES NOT NEED TO BE! NEED TO GIVE EXAMPLES WHERE Our MODEL IS BETTER THAN BARGAINING- EXAMPLES. WHEN TRUST IS AN ISSUE (PUT THIS IN THE TRUST SECTION)
 %Need to add risk aversion in MAIN TEXT
 
-Countries\footnote{Players will be referred to as countries, though it could also be appropriate to think of players as intra-state actors, as in a civil war. } are of two possible types, high and low. A high type discounts future period payoffs at rate $\delta_h$ and a low type discounts at $\delta_l$. $\delta_h >\delta_l$ and both $\delta_h ,\delta_l$ $\in [0,1].$ Before the start of the game, nature independently determines the types of country 1 and country 2. The type distinction, as explained later in the model, is relevant in that it encompasses the country's willingness to cooperate in solving the conflict. It should not be thought of as an inherent quality of a country, but rather an interactive parameter. Thus it is not necessary to think of a type as fixed; it can change as regimes and relations between countries change.\footnote{We can enrich the model to assign a probability (and even different probabilities) of a country's type shifting from high to low or low to high in a given period.}
+Countries\footnote{Players will be referred to as countries, though it could also be appropriate to think of players as intra-state actors, as in a civil war. } are of two possible types, high and low. A high type discounts future period payoffs at rate $\delta_h$ and a low type discounts at $\delta_l$ where $\delta_h >\delta_l$ and $\delta_h ,\delta_l$ $\in [0,1].$ Before the start of the game, nature independently determines the types of country 1 and country 2. The type distinction, as explained in detail later, is relevant in that it encompasses the country's willingness to cooperate in solving the conflict. It is not necessary to think of a type as fixed; it can change as regimes and relations between countries change.\footnote{We can enrich the model to assign a probability (and even different probabilities) of a country's type shifting from high to low or low to high in a given period.}
 
- The probability of nature selecting the high type for a given player is $p$. The probability of nature selecting the low type is $1-p$.\footnote{Note that parameters are symmetric across countries, as is consistent with the literature. Qualititative results do not depend on this being the case, and equilibria and equilibrium concessions can easily be calculated with asymmetric parameters between players.}  Countries are aware of their own type, but not the type of the other country.  Similar scenarios have been modeled as credible commitment problems in the bargaining literature. Our model can be thought of as a reduced form bargaining model, but it can also be considered somewhat differently -- when trust is the issue to be solved, there are several solutions to conflict. Concessions are one way in which countries can signal their commitment.  By modeling the conflict in such a way we can also gain insight as to how a third party can ameliorate trust issues inherent to the conflict. %might want to cite fearon and bargaining lit here
+ The probability of nature selecting the high type for a given country is $p$. The probability of nature selecting the low type is $1-p$.\footnote{Note that parameters are symmetric across countries, as is consistent with the literature. Qualititative results do not depend on this being the case, and equilibria and equilibrium concessions can easily be calculated with asymmetric parameters between players.}  Countries are aware of their own type, but not the type of the other country.  Similar scenarios have been modeled as credible commitment problems in the bargaining literature. Our model can be thought of as a reduced form bargaining model, but it can also be considered somewhat differently -- when trust is the issue to be solved, there are several solutions to conflict. Concessions are one way in which countries can signal their commitment.  By modeling the conflict in such a way we can also gain insight as to how a third party can ameliorate trust issues inherent to the conflict. %might want to cite fearon and bargaining lit here
 %might want to eventually add the stochastic type switch- or at least talk about how that changes analysis
 
-In period 0, countries 1 and 2 simultaneously give costly concessions $g_1$ and $g_2$ $\in \mathbb{R} \geq 0$. Concessions are given at cost $C(g_i)$ and benefit the recipient in the amount $g_i$, where $i\in\left\{1,2\right\}$. For simplicity, we assume $C(g_i)= g_i$.
+In period 0, countries 1 and 2 simultaneously give costly concessions $g_i$ $\in \mathbb{R} \geq 0$, where $i\in\left\{1,2\right\}$. Concessions are given at cost $C(g_i)$ and are valued by the recipient in the amount $g_i$. For simplicity, we assume throughout that the cost of giving the gift is equal to the value to the recipient, that is $C(g_i)= g_i$.
 
-Beginning in period 1, countries engage in an infinitely repeated Prisoner's Dilemma once per period with stage game payoffs represented below. While not a good representation of all-out war, the Prisoner's Dilemma is appropriate to represent a limited, continued conflict, not a zero-sum short term war. In cases appropriately modeled by a Prisoner's Dilemma, it would be better for both parties to exit the protracted conflict, but no party has the unilateral incentive to do so. The critical results of this paper do not depend on a prisoner's dilemma structure; they require only that a better result can be achieved through trust or credible commitment. Thus, a stag hunt or other game structures are also possible. The Prisoner's Dilemma is used because of its wide exposure in the literature.\footnote{This payoff matrix does not distinguish between civil and interstate conflict, though in practice the effects on the payoffs might indeed have a different structure in the different cases.} %cite difference from fearon here?
+Beginning in period 1, countries engage in an infinitely repeated Prisoner's Dilemma once per period with stage game payoffs in Table 1 below. While not a good representation of all-out war or even a zero-sum short term war, the Prisoner's Dilemma is appropriate to represent a limited, continued conflict. In cases appropriately modeled by a Prisoner's Dilemma, it would be better for both parties to exit the protracted conflict, but no party has the unilateral incentive to do so. The critical results of this paper do not depend on a prisoner's dilemma structure; they require only that a better result can be achieved through trust or credible commitment. Thus, a stag hunt or other game structures are also possible. The Prisoner's Dilemma is used because of its wide exposure in the literature.\footnote{This payoff matrix does not distinguish between civil and interstate conflict, though in practice the effects on the payoffs might indeed have a different structure in the different cases.} %cite difference from fearon here?
 %LAKE More generally, the problem of war, on which you implicitly focus, is now understood as a pure bargaining game (i.e., zero sum). This is not well represented by the PD. You need to make the link Ğ or differentiate Ğ what youÕre doing here from the Fearon-Powell models to which you appeal.
 
-The county's stage game actions will be referred to as ``Trust'' and ``Fight'':
+The countries' stage game actions will be referred to as ``Trust'' and ``Fight'' as represented in Table 1, where Country 1 is the row player and Country 2 is the column player.
 
 \begin{center}
 \captionof{table}{Stage game payoffs}
 \begin{tabular}{|l|c|c|}
   \hline      & Trust & Fight \\ \hline
-	 Trust& T, T& -D, T+W \\ \hline
-	Fight & T+W,-D& W-D, W-D \\ \hline
+	 Trust& $T$, $T$& $-D$, $T+W$ \\ \hline
+	Fight & $T+W$, $-D$& $W-D$, $W-D$ \\ \hline
 \end{tabular}
 \end{center}
 
-$T\geq0$: Benefit from the other country playing Trust
+Here $T\geq0$ represents the benefit from the other country playing Trust. $D\geq0$ represents the damages incurred when the other country plays Fight, while $W\geq0$ is the additional benefit a country receives when it plays Fight itself. We assume $T>W-D$ in line with the assumption that the countries play a Prisoner's Dilemma in the stage game. 
 
-$W\geq0$: Additional benefit from playing Fight
+Payoffs for a country are the sum the stage game payoffs, discounted by $\delta_i$. For example, if both parties play ``Trust'' in every period, the payoff for a player $i$ is $\sum_{t=1}^\infty \de_i^{t-1} T = \frac{T}{1-\de_i}.$ Parameters are common knowledge with the exception of $\delta_i$, which is country $i$'s private information. %Countries' utility is calculated as ex interim utility (Holmstrom and Myerson 1983),  i.e. when countries know their own type but not that of the other country. Depending on parameters, multiple equilibria are often possible. 
+We will take the measure of social welfare, and thus the determinant of the optimal equilibrium, to be the sum of participating high types' expected utilities.
 
-$D\geq0$: Damages due to the other country playing Fight
+The assumption $T>W-D$ ensures that the joint payoffs from (Trust, Trust)---which we will refer to as ``Peace''---are the highest among all the stage-game action profiles. If $\delta_i$ is high enough for both countries, the ``Peace'' outcome can be sustained with a grim trigger punishment threat; that is, both countries play ``Trust'' as long as the other plays ``Trust'' and play ``Fight'' if there is ever a deviation from ``Trust.'' We will refer to the stage-game Nash Equilibrium of (Fight, Fight) as ``War.''
 
-Assume $T>W-D$. 
- Payoffs for a country are the sum the stage game payoffs, discounted by $\delta.$ For example, if both parties play ``Trust'' in every period, the payoff for a player $i$ is $\sum_{t=1}^\infty \de_i^{t-1} T = \frac{T}{1-\de_i}.$ Parameters are common knowledge with the exception of $\delta_i$, which is country i's private information. %Countries' utility is calculated as ex interim utility (Holmstrom and Myerson 1983),  i.e. when countries know their own type but not that of the other country. Depending on parameters, multiple equilibria are often possible. 
-The measure of social welfare, and thus the determinant of the optimal equilibrium, will be the sum of participating high types' expected utilities.
-
- If $\delta$ is high enough for both countries, the cooperative outcome of ``Peace'' (Trust, Trust) can be sustained with a grim trigger punishment threat. The assumption $T>W-D$ ensures that payoffs from Peace are higher than for ``War'' (Fight, Fight).
-For a Peace equilibrium to exist, $\delta$ must be high enough for each country so that sustaining Peace is more attractive than deviating. 
-The threshold $\delta^*$ needed is \be
- \delta^* = \frac{W}{T+D}
+For a Peace equilibrium to exist, $\delta_i$ must be high enough for each country so that sustaining Peace is more attractive than deviating. 
+The threshold $\delta_i^*$ needed is \be
+ \delta_i^* = \frac{W}{T+D}
  \ee
-Assume $\delta_h> \delta^*$ and $\delta_l < \delta^*$.   
+We differentiate the high and low types by assuming $\delta_h> \delta_i^*$ and $\delta_l < \delta_i^*$. This implies that, with perfect information about the $\delta_i$'s, two high types---and only two high types---can sustain the Peace outcome in a simple repeated game.
 
 \section{Analysis of Benchmark Cases}
 \label{sec:bench}
