--- a/draft.tex
+++ b/draft.tex
@@ -194,7 +194,7 @@ The analysis is conducted with standard incentive compatibility constraints. Con
 3) Country 1 plays Fight in round 1 while country 2 plays Trust, which is followed by both countries playing Fight from round 2 onwards and 
 4) Country 2 plays Fight in round 1 while country 1 plays Trust, which is followed by both countries playing Fight from round 2 onwards.
 
-Equilibrium payoffs beginning from round 1 are now easily described by noting only the collective first round behavior. Let $X_{ij}$ represent the sum of discounted payoffs for country i where subscripts represent first round strategies of that country. If both countries play T in round 1, the corresponding payoff to country i is represented as $ X_{TT}=\frac {T}{1- \delta_i}$. Likewise $X_{TF}=({-D}+\frac{\delta_i(W-D)}{1- \delta_i} )$, $ X_{FF}=\frac{W-D}{1- \delta_i}$, and  $X_{FT}=T+W +\frac{\delta_i(W-D)}{1- \delta_i}$. Note that because types have different discount rates, these quantities are different by type, and when ambiguous will be superscripted to indicate the type (e.g. $X_{FT}^h$ represents the high type). Note that because of the signaling value of the concessions given in period 0, starting from period 1 in the Trust/Fight game, both countries play the same strategy in a separating equilibrium (both play Trust if there were two high signals; otherwise both play Fight). $X_{FT}$ and $X_{TF}$ are still necessary for calculating the equilibrium concession $g_h$.%might make the first one TF for clarity
+Equilibrium payoffs beginning from round 1 are now easily described by noting only the collective first round behavior. Let $X_{ij}$ represent the sum of discounted payoffs for country $i$ where subscripts represent first round strategies of that country. If both countries play T in round 1, the corresponding payoff to country $i$ is represented as $ X_{TT}=\frac {T}{1- \delta_i}$. Likewise $X_{TF}=({-D}+\frac{\delta_i(W-D)}{1- \delta_i} )$, $ X_{FF}=\frac{W-D}{1- \delta_i}$, and  $X_{FT}=T+W +\frac{\delta_i(W-D)}{1- \delta_i}$. Note that because types have different discount rates, these quantities are different by type, and when ambiguous will be superscripted to indicate the type (e.g. $X_{FT}^h$ represents the high type). Note that because of the signaling value of the concessions given in period 0, starting from period 1 in the Trust/Fight game, both countries play the same strategy in a separating equilibrium (both play Trust if there were two high signals; otherwise both play Fight). $X_{FT}$ and $X_{TF}$ are still necessary for calculating the equilibrium concession $g_h$.%might make the first one TF for clarity
 
 \begin{lemma}
 	In a separating equilibrium, low types do not give a concession. Cheap talk does not allow for a concessions separating equilibrium.
@@ -224,11 +224,11 @@ One example of such an equilibrium includes Israel and Egypt at the Camp David A
 \label{sec:IC}
 
 \subsection{Concessions with Material Value}
-We now model concessions to have real future material value that can either help or harm the giver. The interpretation is that the country which receives the concessions can use them to build up their military or to build up their civil society. The former hurts the giver of the concessions in war; the latter helps the giver in peace. The Golan heights is such an example: if Syria is an ally of Israel, the Golan Heights is a reasonable concession to make, but if Syria later turns out to betray a trust, surrender of the strategic land would be disastrous for Israel. %Another example is ADD more examples
+We now model concessions to have real future material value that can either help or harm the giver. The interpretation is that the country which receives the concessions can use them to build up their military or to build up their civil society. Using concessions to build military strength hurts the giver of the concessions in war; using the concessions to strengthen civil socity helps the giver in peace. The Golan heights is such an example: if Syria is an ally of Israel, the Golan Heights is a reasonable concession to make, but if Syria later turns out to betray a trust, surrender of the strategic land would be disastrous for Israel. %Another example is ADD more examples
 
-Allow $T,W$ and $D$ to be functions that depend on arguments $s_i$, the size of country i's civil society and $m_i$, the size of country i's military. $s_i$ and $m_i$ are exogenous.
+We incorporate future material value into the model by allowing $T,W$ and $D$ to be functions that depend on arguments $s_i$, the size of country $i$'s civil society and $m_i$, the size of country $i$'s military. $s_i$ and $m_i$ are assumed to be exogenous.
 
-In period 0, after receiving his concession, a country makes the decision to allocate it between military and civil society. $\alpha_i$ is the portion of his received concession that country i chooses to dedicate to civil society; $(1- \alpha_i$) is the portion country i dedicates to military buildup. This decision is a simple optimization problem for each country. Parameters are common knowledge so the result of this decision is well known should the country's type be known. Concessions are immediately converted into civil society or military gifts and incorporated into payoff functions. Periods 1 to $\infty$ are as before but with the following stage game payoffs:
+In period 0, after receiving its concession, a country makes the decision to allocate the value of the concession between military and civil society. $\alpha_i$ is the portion of the received concession that country $i$ chooses to dedicate to civil society; $(1- \alpha_i$) is the portion country $i$ dedicates to military buildup. This decision is a simple optimization problem for each country. Parameters are common knowledge so the result of this decision is well known should the country's type be known. Concessions are immediately converted into civil society or military gifts and incorporated into payoff functions. Periods 1 to $\infty$ are as before but with the following stage game payoffs:
 
 \begin{center}
 \captionof{table}{Stage game payoffs when concessions have material value}
