fix min dh for e=0 case in calculations file

--- a/notes.tex
+++ b/notes.tex
@@ -644,8 +644,17 @@ Parameterization 6: $We > W1 > W0$, $54 > 7.33 > 7$. Mediator optimally chooses 
 						\[
 							\de_h \geq \frac{W}{(T+D)(1-p)} - \frac{p}{1-p}
 						\]
-						I have a page of math that shows that this is strictly smaller than $d^h$. This means that the set of types who can make and sustain peace under the CSE with no material value / CSE with material value and $e=0$ is larger than the set of types who can make and sustain peace under the repeated game.
 							\begin{itemize}
+								\item For P6 this is zero, for P1 and P2 it's negative, and it's positive for the rest
+							\end{itemize}
+						The following shows that this is strictly smaller than $\de^h$. This means that the set of types who can make and sustain peace under the CSE with no material value / CSE with material value and $e=0$ is larger than the set of types who can make and sustain peace under the repeated game.
+							\begin{itemize}
+								\item $T+D>W$
+								\item $-(T+D)<-W$
+								\item $-p(T+D)<-pW$
+								\item $W-p(T+D)<W-pW$
+								\item $\frac{W-p(T+D)}{T+D}<\frac{W-pW}{T+D} = \frac{(1-p)W}{T+D}$
+								\item $\frac{W-p(T+D)}{(1-p)(T+D)} = \frac{W}{(1-p)(T+D)} - \frac{p(T+D)}{(1-p)(T+D)} = \frac{W}{(1-p)(T+D)} - \frac{p}{1-p}< \frac{W}{T+D}$. Q.E.D.
 								\item This is nice, but I'm not sure it helps with the narrative of the story.
 							\end{itemize}
 			\end{itemize}
